refactor: Money 비교 - Override compareTo > biggerThan